tests/macro-tests/cases/property/child_type_constraints_ui_node.stderr
error: property first arg can only have types `impl IntoUiNode` or `&mut WidgetBuilding`
 --> cases/property/child_type_constraints_ui_node.rs:4:29
  |
4 | pub fn invalid_child(child: FillUiNode, input: impl IntoVar<bool>) -> UiNode {
  |                             ^^^^^^^^^^
